--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -20,10 +20,11 @@ env:
   IBM_CLOUD_REGION: us-south
   ICR_NAMESPACE: ${{ secrets.ICR_NAMESPACE }}
   REGISTRY_HOSTNAME: us.icr.io
-  IMAGE_NAME: iks-test
-  IKS_CLUSTER: example-iks-cluster-name-or-id
-  DEPLOYMENT_NAME: iks-test
-  PORT: 5001
+  IMAGE_NAME: hello-world-apache
+  IKS_CLUSTER: timetracker-cluster
+  IKS_CLUSTER_NAMESPACE: doug-lab
+  DEPLOYMENT_NAME: github-cicd-demo
+  PORT: 80
 
 jobs:
   setup-build-publish-deploy:
@@ -67,7 +68,7 @@ jobs:
     - name: Deploy to IKS
       run: |
         ibmcloud ks cluster config --cluster $IKS_CLUSTER
-        kubectl config current-context
+        kubectl config set-context --current --namespace=$IKS_CLUSTER_NAMESPACE
         kubectl create deployment $DEPLOYMENT_NAME --image=$REGISTRY_HOSTNAME/$ICR_NAMESPACE/$IMAGE_NAME:$GITHUB_SHA --dry-run -o yaml > deployment.yaml
         kubectl apply -f deployment.yaml
         kubectl rollout status deployment/$DEPLOYMENT_NAME
