--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -18,9 +18,10 @@ env:
   GITHUB_SHA: ${{ github.sha }}
   IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
   IBM_CLOUD_REGION: us-south
+  IBM_CLOUD_RESOURCE_GROUP: time-tracker
   ICR_NAMESPACE: ${{ secrets.ICR_NAMESPACE }}
   REGISTRY_HOSTNAME: us.icr.io
-  IMAGE_NAME: hello-world-apache
+  IMAGE_NAME: cicd-demo
   IKS_CLUSTER: timetracker-cluster
   IKS_CLUSTER_NAMESPACE: doug-lab
   DEPLOYMENT_NAME: github-cicd-demo
@@ -48,7 +49,7 @@ jobs:
     # Authenticate with IBM Cloud CLI
     - name: Authenticate with IBM Cloud CLI
       run: |
-        ibmcloud login --apikey "${IBM_CLOUD_API_KEY}" -r "${IBM_CLOUD_REGION}" -g default
+        ibmcloud login --apikey "${IBM_CLOUD_API_KEY}" -r "${IBM_CLOUD_REGION}" -g "${IBM_CLOUD_RESOURCE_GROUP}"
         ibmcloud cr region-set "${IBM_CLOUD_REGION}"
         ibmcloud cr login
 
@@ -67,12 +68,12 @@ jobs:
     # Deploy the Docker image to the IKS cluster
     - name: Deploy to IKS
       run: |
-        ibmcloud target -g time-tracker
         ibmcloud ks cluster config --cluster $IKS_CLUSTER
         kubectl config set-context --current --namespace=$IKS_CLUSTER_NAMESPACE
         kubectl create deployment $DEPLOYMENT_NAME --image=$REGISTRY_HOSTNAME/$ICR_NAMESPACE/$IMAGE_NAME:$GITHUB_SHA --dry-run -o yaml > deployment.yaml
-        kubectl apply -f deployment.yaml
-        kubectl rollout status deployment/$DEPLOYMENT_NAME
-        kubectl create service loadbalancer $DEPLOYMENT_NAME --tcp=80:$PORT --dry-run -o yaml > service.yaml
-        kubectl apply -f service.yaml
-        kubectl get services -o wide
+        cat deployment.yaml
+        #kubectl apply -f deployment.yaml
+        #kubectl rollout status deployment/$DEPLOYMENT_NAME
+        #kubectl create service loadbalancer $DEPLOYMENT_NAME --tcp=80:$PORT --dry-run -o yaml > service.yaml
+        #kubectl apply -f service.yaml
+        #kubectl get services -o wide
