--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -56,7 +56,7 @@ jobs:
     # Build the Docker image
     - name: Build with Docker
       run: |
-        sed 's/%%IMAGE_TAG%%/${GITHUB_SHA}/g' template.html > index.html
+        sed 's/%%IMAGE_TAG%%/$GITHUB_SHA/g' template.html > index.html
         docker build -t "$REGISTRY_HOSTNAME"/"$ICR_NAMESPACE"/"$IMAGE_NAME":"$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" .
