--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -56,22 +56,22 @@ jobs:
     # Build the Docker image
     - name: Build with Docker
       run: |
-        sed "s/%%IMAGE_TAG%%/${GITHUB_SHA}::8/g" template.html > index.html
-        docker build -t "$REGISTRY_HOSTNAME"/"$ICR_NAMESPACE"/"$IMAGE_NAME":"${GITHUB_SHA}::8" \
-          --build-arg GITHUB_SHA="${GITHUB_SHA}::8" \
-          --build-arg GITHUB_REF="${GITHUB_SHA}::8" .
+        sed "s/%%IMAGE_TAG%%/$GITHUB_SHA/g" template.html > index.html
+        docker build -t "$REGISTRY_HOSTNAME"/"$ICR_NAMESPACE"/"$IMAGE_NAME":"$GITHUB_SHA" \
+          --build-arg GITHUB_SHA="$GITHUB_SHA" \
+          --build-arg GITHUB_REF="$GITHUB_REF" .
 
     # Push the image to IBM Container Registry
     - name: Push the image to ICR
       run: |
-        docker push $REGISTRY_HOSTNAME/$ICR_NAMESPACE/$IMAGE_NAME:${GITHUB_SHA}::8
+        docker push $REGISTRY_HOSTNAME/$ICR_NAMESPACE/$IMAGE_NAME:$GITHUB_SHA
 
     # Deploy the Docker image to the IKS cluster
     - name: Deploy to IKS
       run: |
         ibmcloud ks cluster config --cluster $IKS_CLUSTER
         kubectl config set-context --current --namespace=$IKS_CLUSTER_NAMESPACE
-        kubectl create deployment $DEPLOYMENT_NAME --image=$REGISTRY_HOSTNAME/$ICR_NAMESPACE/$IMAGE_NAME:${GITHUB_SHA}::8 --dry-run -o yaml > deployment.yaml
+        kubectl create deployment $DEPLOYMENT_NAME --image=$REGISTRY_HOSTNAME/$ICR_NAMESPACE/$IMAGE_NAME:$GITHUB_SHA --dry-run -o yaml > deployment.yaml
         kubectl apply -f deployment.yaml
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl create service loadbalancer $DEPLOYMENT_NAME --tcp=80:$PORT --dry-run -o yaml > service.yaml
